# feature-deformation

./: CMakeLists.txt  LICENSE  README.md
common/: checks.h  hash.h  math.h
plugins/: CMakeLists.txt  projects.cmake
plugins/feature_deformation/: CMakeLists.txt
plugins/feature_deformation/modules/curvature/: CMakeLists.txt  curvature.cxx  curvature.h  curvature.module
plugins/feature_deformation/modules/feature_deformation/: CMakeLists.txt  algorithm.h  algorithm.inl  algorithm_compute_gauss.cxx  algorithm_compute_gauss.h  algorithm_compute_tearing.cxx  algorithm_compute_tearing.h  algorithm_displacement_assessment.cxx  algorithm_displacement_assessment.h  algorithm_displacement_computation.cxx  algorithm_displacement_computation.h  algorithm_displacement_computation_twisting.cxx  algorithm_displacement_computation_twisting.h  algorithm_displacement_computation_winding.cxx  algorithm_displacement_computation_winding.h  algorithm_displacement_creation.cxx  algorithm_displacement_creation.h  algorithm_displacement_precomputation.cxx  algorithm_displacement_precomputation.h  algorithm_geometry_input.cxx  algorithm_geometry_input.h  algorithm_geometry_output_creation.cxx  algorithm_geometry_output_creation.h  algorithm_geometry_output_set.cxx  algorithm_geometry_output_set.h  algorithm_geometry_output_update.cxx  algorithm_geometry_output_update.h  algorithm_grid_input.cxx  algorithm_grid_input.h  algorithm_grid_output_creation.cxx  algorithm_grid_output_creation.h  algorithm_grid_output_set.cxx  algorithm_grid_output_set.h  algorithm_grid_output_update.cxx  algorithm_grid_output_update.h  algorithm_grid_output_vectorfield.cxx  algorithm_grid_output_vectorfield.h  algorithm_input.h  algorithm_line_input.cxx  algorithm_line_input.h  (+34 more)
plugins/feature_deformation/modules/feature_flow_separation/: CMakeLists.txt  feature_flow_separation.cxx  feature_flow_separation.h  feature_flow_separation.module
plugins/feature_deformation/modules/fix_curvature_gradient/: CMakeLists.txt  fix_curvature_gradient.cxx  fix_curvature_gradient.h  fix_curvature_gradient.module
plugins/feature_deformation/modules/optimizer/: CMakeLists.txt  optimizer.cxx  optimizer.h  optimizer.module
plugins/feature_deformation/plugin/: CMakeLists.txt  VISUSfeature_deformation.plugin  VISUSfeature_deformation.xml
